src/test/resources/purescript_examples/failing/RowInInstanceNotDetermined0.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith InvalidInstanceHead\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n-- no fundeps\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)('\n')
        PSImpliesImpl(Implies)
          <empty list>
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('c')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(TypeConstructor)
            PSProperNameImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('Unit')
                PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSObjectTypeImpl(ObjectType)
            PsiElement({)('{')
            PSRowImpl(Row)
              <empty list>
            PsiElement(})('}')
            PsiElement(whitespace)('\n\n')
